[package]
name = "source-watch"
version = "0.0.1"
authors = ["merl <merl.001.mia@gmail.com>"]
edition = "2021"

license = "MIT"
readme = "README.md"
description = "Watch the external file resources and notify on change"

repository = "https://github.com/merl-twin/source-watch"
homepage = "https://github.com/merl-twin/source-watch"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
log = "0.4"

